<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="input_your_name">input your name</string>
    <string name="input_your_password">input your password</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="name">enter yout full name</string>
    <string name="town">enter your town</string>
    <string name="something_about_you">Something about you</string>
    <string name="birthday">birthday:</string>
    <string name="set_up_your_profile_picture">set up your profile picture</string>
    <string name="feed">feed</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="post">POST</string>
    <string name="cancel">CANCEL</string>
    <string name="dialogmessage">Do you want to follow this user?\n the posts would be appear on your feed page</string>
    <string name="title">Interested?</string>
    <string name="unfollow">Are you sure to unfollow?\n you would not get posts from him/her</string>
</resources>
